--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -1,11 +1,15 @@
+@import url('https://fonts.googleapis.com/css?family=Rajdhani');
+
 .genreCover {
     min-height: 200px;
     display: block;
 }
 
 .genreTitle {
-    font-size: 30px !important;
-    text-shadow: 2px 2px 4px #000000;
+    font-size: 35px !important;
+    font-weight: 100 !important;
+    text-shadow: 1px 1px 2px #000000;
+    font-family: 'Rajdhani', sans-serif;
 }
 
 .genreOverlay {
@@ -21,6 +25,15 @@
     height: 100%;
     width: 100%;
     background: linear-gradient(
-    rgba(118, 0, 255, 0.5), 
-    rgba(118, 0, 255, 0.1));
+    rgba(0, 255, 149, 0.1), 
+    rgba(118, 0, 255, 0.9));
+}
+
+.card {
+    transition: all 0.3s;
+    cursor: pointer;
+}
+
+.card:hover {
+    box-shadow: 0 8px 17px 2px rgba(0,0,0,0.14), 0 3px 14px 2px rgba(0,0,0,0.12), 0 5px 5px -3px rgba(0,0,0,0.2);
 }
