--- a/client/public/css/card.css
+++ b/client/public/css/card.css
@@ -1,7 +1,15 @@
-@import url('https://fonts.googleapis.com/css?family=Rajdhani');
+.genres {
+    position: absolute;
+    top: 55%;
+    left: 0; 
+    right: 0; 
+    margin-left: auto; 
+    margin-right: auto; 
+    width: 100px;
+}
 
 .genreCover {
-    min-height: 200px;
+    min-height: 220px;
     display: block;
 }
 
@@ -15,6 +23,7 @@
 .genreOverlay {
     display: block;
     position: relative;
+    cursor: pointer;
 }
 
 .genreOverlay::after {
@@ -27,13 +36,4 @@
     background: linear-gradient(
     rgba(0, 255, 149, 0.1), 
     rgba(118, 0, 255, 0.9));
-}
-
-.card {
-    transition: all 0.3s;
-    cursor: pointer;
-}
-
-.card:hover {
-    box-shadow: 0 8px 17px 2px rgba(0,0,0,0.14), 0 3px 14px 2px rgba(0,0,0,0.12), 0 5px 5px -3px rgba(0,0,0,0.2);
 }
