--- a/client/public/css/radio.css
+++ b/client/public/css/radio.css
@@ -19,7 +19,7 @@
     background: linear-gradient(
     rgba(118, 0, 255, 0.8), 
     rgba(0, 255, 242, 0.95)),
-    url("../img/radio.jpg");
+    url("../img/background/radio.jpg");
 	background-size: cover;
 	background-repeat: no-repeat;
     background-attachment: fixed;
