--- a/client/public/css/main.css
+++ b/client/public/css/main.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Rajdhani');
+@import url('https://fonts.googleapis.com/css?family=Rajdhani|Poiret+One');
 
 .noSelect {
     -webkit-touch-callout: none;
