--- a/client/public/css/radio.css
+++ b/client/public/css/radio.css
@@ -60,3 +60,10 @@
     width: 100%;
     margin: 0 auto;
 }
+
+.barCont {
+    position: absolute;
+    top: 80vh;
+    width: 90%;
+    left: 5%;
+}
