--- a/client/public/css/radio.css
+++ b/client/public/css/radio.css
@@ -7,7 +7,6 @@
 .radioOptions {
     font-size: 120px !important;
     opacity: 0.7;
-    transition: all 0.3s;
     cursor: pointer;
     position: absolute;
     top: 50%;
@@ -63,7 +62,29 @@
 
 .barCont {
     position: absolute;
-    top: 80vh;
+    top: 80%;
     width: 90%;
     left: 5%;
+}
+
+.playing {
+    animation: zoom 1.5s infinite linear;
+}
+
+@keyframes zoom {
+	0% {
+		transform: scale(1);
+    }
+    
+    33% {
+		transform: scale(1.033);
+    }
+    
+    66% {
+		transform: scale(1.066);
+    }
+    
+    100% {
+		transform: scale(1);
+	}
 }
