--- a/client/public/css/card.css
+++ b/client/public/css/card.css
@@ -14,10 +14,10 @@
 }
 
 .genreTitle {
-    font-size: 35px !important;
+    font-size: 25px !important;
     font-weight: 100 !important;
-    text-shadow: 1px 1px 2px #000000;
-    font-family: 'Rajdhani', sans-serif;
+    letter-spacing: 2px;
+    font-family: 'Poiret One', cursive;
 }
 
 .genreOverlay {
