--- a/client/public/css/main.css
+++ b/client/public/css/main.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Rajdhani|Poiret+One');
+@import url('https://fonts.googleapis.com/css?family=Rajdhani|Poiret+One|Advent+Pro');
 
 .noSelect {
     -webkit-touch-callout: none;
@@ -21,17 +21,19 @@ body {
 }
 
 #intro {
-    font-family: 'Rajdhani', sans-serif;
+    font-family: 'Poiret One', cursive;
 }
 
 #intro h1 {
     margin-top: 100px;
     font-size: 70px;
     letter-spacing: 10px;
+    opacity: 0.8;
 }
 
 #intro p {
     font-size: 20px;
+    opacity: 0.6;
 }
 
 #player {
