--- a/client/public/css/radio.css
+++ b/client/public/css/radio.css
@@ -79,7 +79,6 @@
 }
 
 .streamerCont {
-    width: 100%;
     margin: 0 auto;
 }
 
@@ -121,6 +120,11 @@
 
 .playing {
     animation: zoom 1.5s infinite linear;
+}
+
+.user-view {
+    min-height: 20vh;
+    margin-bottom: 0 !important;
 }
 
 @keyframes zoom {
