--- a/client/public/css/card.css
+++ b/client/public/css/card.css
@@ -37,3 +37,31 @@
     rgba(0, 255, 149, 0.1), 
     rgba(118, 0, 255, 0.9));
 }
+
+.sideCard {
+    margin: 0 !important;
+}
+
+.user-view .card-image {
+    max-height: 25vh !important;
+}
+
+.user-view .genreOverlay:after {
+    background: linear-gradient(
+    rgba(0, 255, 149, 0.1), 
+    rgba(118, 0, 255, 0.9));
+}
+
+#slide-out::-webkit-scrollbar {
+    width: 0px;
+}
+ 
+#slide-out::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    border-radius: 0px;
+}
+ 
+#slide-out::-webkit-scrollbar-thumb {
+    border-radius: 0px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+}
