--- a/client/public/css/radio.css
+++ b/client/public/css/radio.css
@@ -142,7 +142,7 @@
 }
 
 .user-view {
-    min-height: 25vh;
+    min-height: 20vh;
     margin-bottom: 0 !important;
     transition: all 0.5s;
 }
@@ -162,6 +162,53 @@
     font-size: 25px;
     padding-bottom: 15px;
 }
+
+#volumeCont {
+    width: 62.5%;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    color: white;
+    z-index: 1339 !important;
+    margin-right: 20px;
+    display: none;
+}
+
+#volumeRow {
+    padding: 0 !important;
+}
+
+.volIco {}
+
+#volumeCont i {
+    margin-top: 4px;
+}
+
+#volumeCont .volumeDown {
+    float: left;
+}
+
+#volumeCont .volumeUp {
+    float: right;
+}
+
+#volume {
+}
+
+input[type=range] {
+    border: none !important;
+    background-color: white !important;
+}
+
+input[type=range]::-webkit-slider-thumb {
+    background-color: white !important;
+  }
+  input[type=range]::-moz-range-thumb {
+    background-color: white !important;
+  }
+  input[type=range]::-ms-thumb {
+    background-color: white !important;
+  }
 
 @keyframes zoom {
 	0% {
