--- a/client/public/css/radio.css
+++ b/client/public/css/radio.css
@@ -163,8 +163,14 @@
     padding-bottom: 15px;
 }
 
+.sidenav-overlay {
+    background: linear-gradient(
+    rgba(0, 0, 0, 0.5), 
+    rgba(0, 0, 0, 1)) !important;
+}
+
 #volumeCont {
-    width: 62.5%;
+    width: 500px;
     position: absolute;
     bottom: 0;
     right: 0;
